--- a/PSDE/pacco.sty
+++ b/PSDE/pacco.sty
@@ -352,10 +352,10 @@
 		colback=red!5!white,sharp corners, colframe=white,
 		breakable,
 		drop shadow,
-		boxed title style={interior style={fill overzoom image=scrapped},sharp corners},
+		boxed title style={interior style={fill overzoom image=resources/scrapped},sharp corners},
 		coltitle=black,
 		fonttitle=\bfseries\itshape,
-		interior style={fill tile image*={width=1.1\linewidth}{squares}},
+		interior style={fill tile image*={width=1.1\linewidth}{resources/squares}},
 		frame style={white},
 		title={Proof}}	
 		
