--- a/PSDE/main.tex
+++ b/PSDE/main.tex
@@ -3,7 +3,7 @@
 
 \title{PSDE}
 \author{Kotatsu's Gang}
-\date{I Don't Remember The Complete Title Of the Course}
+\date{Also known as PTSDE}
 
 \begin{document}
 
