--- a/PSDE/pacco.sty
+++ b/PSDE/pacco.sty
@@ -410,6 +410,7 @@
 \newcommand{\dt}{\dif t}
 \newcommand{\du}{\dif u}
 \newcommand{\ds}{\dif s}
+\newcommand{\dz}{\dif z}
 \newcommand{\dw}{\dif\omega}
 \newcommand{\dmu}{\dif\mu}
 \newcommand{\dpr}{\dif\pr}
@@ -428,7 +429,8 @@
 \newcommand{\xxbar}{\overline{\xbar}}
 \newcommand{\xtilde}{\widetilde{X}}
 \newcommand{\ifonly}{\underline{if and only if}}
-
+\newcommand{\intst}{\int_{S}^{T}}
+\newcommand{\intot}{\int_0^{t}}
 		
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
 		\node[shape=circle,draw,
